--- a/02-json.html
+++ b/02-json.html
@@ -26,9 +26,9 @@
             url:'https://laravel.com/'
         }
         ]}">
-        <>
+        <template x-for="donnée in données">
         <li>
-            <span     >nom</span> : 
+            <span x-text="données">nom</span> : 
             <a     >
                 projet</a>
         </li>
