--- a/02-json.html
+++ b/02-json.html
@@ -28,7 +28,7 @@
         ]}">
         <template x-for="donnée in données">
         <li>
-            <span x-text="données">nom</span> : 
+            <span x-text="données.Prénom">nom</span> : 
             <a     >
                 projet</a>
         </li>
